--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   provider: ^6.0.3
   http: ^0.13.4
   syncfusion_flutter_charts: ^20.2.45
-  sqflite: ^2.0.2
-  path: ^1.8.0
+  sqflite: ^2.0.3+1
+  path:
   shared_preferences: ^2.0.12
   crypto: ^3.0.1
 
